# example-python-project

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  LICENSE.md  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml
build-scripts/: clean.sh  linter.sh  test.sh  venv-test.sh  venv.sh
example_package/: pyproject.toml
example_package/tests/program/: test_add_two_numbers.py
example_project/: pyproject.toml  requirements-test.txt  requirements.txt  setup.py
example_project/example_project/: __init__.py  __main__.py  program.py
example_project/src/example_project/: __main__.py  program.py
example_project/test/program/: test_add_two_numbers.py
example_project/tests/program/: test_add_two_numbers.py
scripts/: clean.sh  coverage.sh  dist.sh  docs.sh  install-dev.sh  install.sh  release.sh  venv.sh
