[project]
name = "example_package"
description = "example package"
version = "0.1.0"
authors = [
    { name = "Random Hacker", email = "no@dev.null" }
]
readme = "README.md"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
